# ai-chat

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/client/: .env.example  AGENTS.md  package.json  postcss.config.mjs  tsconfig.json
apps/client/app/: layout.tsx  page.tsx
apps/client/src/api/: auth.ts  axios-instance.ts  chat.ts  index.ts  sessions.ts
apps/client/src/app/: globals.css  layout.tsx  providers.tsx
apps/client/src/lib/: api-client.ts  api.ts  auth-context.tsx  types.ts
apps/python-server/: .env.example  .gitignore  README.md  main.py  pyproject.toml
apps/python-server/src/: config.py
apps/python-server/src/auth/: auth_service.py  jwt_auth.py  router.py
apps/python-server/src/auth/dto/: auth_dto.py
apps/python-server/src/chat/: chat_service.py  router.py
apps/python-server/src/chat/dto/: chat_dto.py
apps/python-server/src/chat/tools/: chat_tools.py
apps/python-server/src/common/enums/: message_role.py
apps/python-server/src/common/exceptions/: http_exceptions.py
apps/python-server/src/common/interfaces/: sse_event.py  ui_block.py
apps/python-server/src/common/middleware/: exception_handler.py
apps/python-server/src/session/: router.py  session_service.py
apps/python-server/src/session/dto/: session_dto.py
apps/python-server/src/supabase/: client.py
apps/server/: .env.example  .gitignore  AGENTS.md  eslint.config.mjs  package.json  tsconfig.json
apps/server/src/: app.module.ts  app.service.ts  main.ts
apps/server/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
(+66 files in other folders)
